# pytorch

./: CMakeLists.txt  bench-baseonly.sh  bench.sh  bench_reportfile_process.py  bench_reportfile_process.sh  bench_with_reportfile.sh  bench_with_reportfile_armeabi-v7a.sh  bench_with_reportfile_armv64-v8a_interactive.sh  bench_with_reportfile_armv7_interactive.sh  benchm.sh  test.sh  test0.sh  testm.sh
android/agpu/: CMakeLists.txt  build.sh  ttest_calc.py
android/agpu/bench_results/: conv2d_4types_0219_out.logcat  gbench_json_process.py
android/agpu/bench_results/notebooks/: agpu-gbench-report-process.ipynb
android/agpu/src/: agpu.cc  agpu.cpp  agpu.h  agpu_gl_header.h  agpu_glsl.cpp  agpu_glsl.h  gen_agpu_glsl.py  gen_agpu_glsl_aten.py  glsl.cpp  glsl.h  shader.cpp  shader.h  shader.py
android/agpu/src/glsl/: addmm.glsl  binary_add.glsl  convDW_buf_IKnchw.glsl  convDW_buf_IKnhwc.glsl  convDW_buf_Inhwc_Knchw.glsl  conv_buf_IKnchw_KrO4C4HW.glsl  conv_buf_IKnchw_KrO4HWC.glsl  conv_buf_IKnchw_SIKOnc4hw.glsl  conv_buf_IKnchw_SIKOnc4hw_KrO4C4HW.glsl  conv_buf_IKnchw_SIKOnc4hw_KrO4HWC.glsl  conv_buf_IKnchw_SKnc4hw.glsl  conv_buf_IKnchw_SKnc4hw_KrO4C4HW_1.glsl  conv_buf_IKnhwc.glsl  conv_buf_IKnhwc_KrO4C4HW.glsl  conv_buf_IKnhwc_KrO4HWC.glsl  conv_buf_Inhwc_Knchw_KrO4C4HW.glsl  convolution.glsl  convolution_buffers_inout_nhwc.glsl  convolution_buffers_out_nc4hw.glsl  convolution_buffers_out_nc4hw_1.glsl  convolution_buffers_out_nchw.glsl  gemm.glsl  maxpool2d.glsl  nc4hw_buffer_to_nchw_buffer.glsl  nchw_buf_to_nc4hw_buf.glsl  nhwc_buf_to_tex.glsl  normalization.glsl  (+1 more)
(+49 files in other folders)
